--- a/test.yml
+++ b/test.yml
@@ -7,4 +7,4 @@ jobs:
     steps:
       - run: echo "Nice work, $First_Name. Deploying to production server on branch $GITHUB_REF"
         env:
-          First_Name: Nesrin
+          First_Name: Nesrin Saxeide
