--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -8,10 +8,13 @@ on:
 
 jobs:
   build:
+    strategy:
+      matrix:
+        os: [ubuntu-lastest, windows-2016]
+        node-version: [8.x, 10.x]
 
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
-    - run: npm ci
     - run: npm run build --if-present
     - run: npm test
