--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,18 +1,8 @@
-name: Node.js CI workflow
-
-on:
-  push:
-    branches: [ main ]
-  pull_request:
-    branches: [ main ]
-
+name: CI
+on: push
 jobs:
-  build:
-    strategy:
-      matrix:
-        os: [ubuntu-lastest, windows-2016]
-        node-version: [8.x, 10.x]
-
+  prod-check:
+    if: github.ref == 'refs/heads/main'
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
+      - run: echo "Deploying to production server on branch $GITHUB_REF"
