--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -3,12 +3,12 @@
 name: CI
 
 # Controls when the workflow will run
-# on:
+on:
   # Triggers the workflow on push or pull request events but only for the "main" branch
-  # push:
-    # branches: [ "main" ]
-  # pull_request:
-    # branches: [ "main" ]
+  push:
+    branches: [ "1" ]
+  pull_request:
+    branches: [ "1" ]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
